Resolved FAB issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ background-position:center;
     }
 	.fixe
 	{
-		display:none;
+		display:none !important;
 	}
 }
 h1
